Fixed '.header h2.half' CSS style to shrink to its content, rather than cause unwanted wrapping on narrow screens.

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -163,6 +163,15 @@ body {
       padding: 0 .25em;
       line-height: 1.75em;
     }
+
+    h2 {
+        &.half {
+            width: 0%;
+            margin-right: 5%;
+            float: left;
+            white-space: nowrap;
+        }
+    }
   }
 
   p {
